--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -30,7 +30,7 @@
 }
 
 $black: #000;
-$primary-color: red;
+$primary-color: blue;
 $primary-hover-color: darkblue;
 $text-color: #000000;
 $background-color: #ffffff;
